feat: add support for region and country filter
