# src/helpers/validations/stops.ts
@@ -6,6 +6,14 @@ export const stopsRequestSchema = z.object({
   name: z.string().optional(),
   road: z.string().optional(),
   township: z.string().optional(),
+  region: z
+    .string()
+    .regex(/[A-Za-z]+/, { message: "Invalid region" })
+    .optional(),
+  country: z
+    .string()
+    .regex(/[A-Za-z]+/, { message: "Invalid country" })
+    .optional(),
   page: z
     .number({ invalid_type_error: '"page" must be a number' })
     .positive()
@@ -14,6 +22,7 @@ export const stopsRequestSchema = z.object({
     .number({ invalid_type_error: '"size" must be a number' })
     .positive()
     .optional(),
+
   format: z.nativeEnum(ResponseFormat).optional(),
 });
 
@@ -27,11 +36,20 @@ export const stopIdSchema = z.object({
 export const nearestRequestSchema = z.object({
   lng: z.string().regex(lngRegex, "Invalid longitude"),
   lat: z.string().regex(latRegex, "Invalid latitude"),
-  format: z.nativeEnum(ResponseFormat).optional(),
+  region: z
+    .string()
+    .regex(/[A-Za-z]+/, { message: "Invalid region" })
+    .optional(),
+  country: z
+    .string()
+    .regex(/[A-Za-z]+/, { message: "Invalid country" })
+    .optional(),
+
   count: z
     .number({ invalid_type_error: '"count" must be a number' })
     .min(1, { message: '"count" must be greater than or equal to 1' })
     .max(100, { message: '"count" must be less than or equal to 100' })
     .optional(),
   distance_unit: z.nativeEnum(DistanceUnits).optional(),
+  format: z.nativeEnum(ResponseFormat).optional(),
 });
